# GLguide

./: .gitignore  CMakeLists.txt  main.cpp
code/: CMakeLists.txt
code/den/: CMakeLists.txt  global.h  textures.cpp
code/managers/: CMakeLists.txt  ModelMan.cpp  ShaderMan.cpp  ShaderMan.hpp  WindowMan.cpp  WindowMan.hpp
code/shaders/: CMakeLists.txt  light.vert  shader.frag  shader.vert
soil/: CMakeLists.txt
src/: CMakeLists.txt  ShaderMan.hpp  WindowMan.cpp  app.cpp  app.h  camera.cpp  camera.h  common.cpp  common.h  cube.cpp  cube.h  dav_mesh.cpp  dav_mesh.h  dav_mesh.hpp  dav_model.cpp  dav_model.h  dav_model.hpp  dav_sdl.cpp  dav_sdl.h  glfw_wind.cpp  glfw_wind.h  global.h  light.frag  objs.cpp  objs.h  shader.frag  shader.vert  shader2.frag  structs.h  textures.cpp  textures.h  triangle.cpp  triangle.h
